# Keyronex

./: .clang-format  .clangd  .editorconfig  .gdbinit  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  amd64.ini  bootstrap.yml  gnu.yml  meson.build  meson_options.txt  style.md  test.sh  userland.yml  vnet.sh  x11.yml
KeyronexKit/: KXInvocation  meson.build
KeyronexKit/KXIPC/: KXDecoder.m  KXEncoder.m  KXIPCConnection.m  KXIPCListener.m  KXIPCRemoteObject.m  KXInvocation+KXEncoding.m  OFString+KXEncoding.m  encoding.h
KeyronexKit/KeyronexKit/: KXDecoder.h  KXEncoder.h  KXIPCConnection.h  KXIPCListener.h  KXIPCRemoteObject.h  KXInvocation.h  macros.h
cmd/adm/: meson.build  passwd  profile  rc
cmd/inet_cmds/: ifconfig.c  meson.build  netstat.c  nlhelper.c  nlhelper.h  route.c
cmd/inet_cmds/ifconfig/: ifconfig.c  ifconfig.h  inet.c  inet6.c  (+1 more)
driver/fbcons/: fbcons.cc  fbcons.hh  meson.build  netascale102x82.data
driver/viofam/: 9pfs.cc  9pfs.hh  9pfs_reg.c  9pfs_reg.h  fusefs.cc  fusefs.hh  meson.build  vio9pprt.cc  vio9pprt.hh  viodev.cc  viodev.hh  viodisk.cc  viodisk.hh  viofsprt.cc  viofsprt.hh  vionet.cc  vionet.hh
kernel/: Makefile  driver  keynex.data  logosmall.data  lwip  meson.build  meson_options.txt  objfwrt
kernel/_OLDdev/: 9pSockTransport.m  DKDevice.m  DKFramebuffer.h  DKObject.h  DKObject.m  DKVirtIOTransport.h  DOSFS.h  Null.h  SimpleFB.h  SimpleFB.m  buf.c  key272x70.data  safe_endian.h
kernel/_sdkinc/: meson.build  string.h
kernel/aarch64/: linker.ld
kernel/amd64/: amd64.c  amd64.h  limine.cfg  linker.ld  locore.S  meson.build  start.c  vm_machdep.c
kernel/common/: meson.build
kernel/cshim/: stdio.h
kernel/dev/: 9pSockTransport.h  9pSockTransport.m  ACPIPC.h  ACPIPC.m  DKAACPIPlatform.h  DKACPIPlatform.m  DKAxis.m  DKDevice.m  DKNIC.h  DKNIC.m  DKObject.m  DKVirtIOMMIODevice.m  DOSFS.h  DOSFS.m  E1000.h  E1000.m  Ext2FS.h  Ext2FS.m  FBTerminal.h  FBTerminal.m  IOAPIC.m  IOApic.h  LimineFB.h  LimineFB.m  Null.m  PCIBus.h  PCIBus.m  PS2Keyboard.h  PS2Keyboard.m  SimpleFB.h  SimpleFB.m  VirtIOBlockDevice.h  VirtIOBlockDevice.m  VirtIODevice.h  VirtIODevice.m  VirtIODisk.h  VirtIODisk.m  VirtIOGPU.h  VirtIOGPU.m  autoconf.m  (+16 more)
kernel/devicekit/: DKDevice.h  DKDevice.m  DKDisk.h  DKDisk.m  DKGPTVolumeManager.h  DKGPTVolumeManager.m  DKLogicalDisk.m  DKNetwork.h
kernel/devmgr/: devfs.c  devmgr.c  fbdev.c  fifofs.c  genfs.c  meson.build  mouse.c  namecache.c  tmpfs.c  tmpfs.h  vfs.c
kernel/executive/: anon.c  anon_obj.c  epoll.c  epoll.h  ex.c  ex_private.h  exec.c  exp.h  file.c  futex.c  idalloc.c  kconsole.c  meson.build  object.c  object.h  objman.c  objtab.c  port_obj.c  process.c  rwlock.c  services.c  start.c  test_vfs.c  worker.c
kernel/fs/: meson.build  sockfs.c
kernel/include/: meson.build
kernel/ios/: meson.build  str_impl.h  streams.c
kernel/kdb/: kdb_udp.h  kdb_udp.m  meson.build
kernel/kern/: clock.c  ki.h  kmem.h  kmem_liballoc.c  kmem_liballoc.h  kmem_slab.c  ksrv.c  ksrv.h  kstart.c  liballoc_sysdep.c  log.m  meson.build  msgqueue.c  mutex.c  obj.c  obj.h  port.c  rcu.c  sched.c  semaphore.c  timecounter.c  timer.c  vmem.c  vmem.h  vmem_impl.h  wait.c
kernel/kernel/: ke.c  ke_internal.h  meson.build  msgqueue.c  mutex.c  sched.c  semaphore.c  thread.c  time.c  timer.c  wait.c
kernel/keysock/: ebpf.c  ip.c  meson.build  packet.c  sock_packet.c  sock_raw.c  sock_tcp.c  sock_udp.c  sock_unix.c  sockfs.c  sockfs.h  sysdep.c
kernel/kobjc/: config.h  meson.build  objfw-defs.h  test.m
kernel/libkern/: OSArray.m  OSDictionary.m  OSMapTable.m  OSNumber.m  OSObject.m  OSString.m  libccompat.h  libkern.c  libkern.h  murmurhash.c  nanoprintf.h  uuid.c  uuid.h
kernel/m68k/: linker.ld  meson.build
kernel/nanokern/: clock.c  kerndefs.h  kernmisc.h  ki.h  meson.build  msgqueue.c  mutex.c  port.c  queue.h  rcu.c  sched.c  semaphore.c  thread.c  thread.h  timer.c  tree.h  wait.c
kernel/net/: buf.c  buf.h  keysock_dev.h  keysock_dev.m  lwip_sup.c  meson.build  net.c  net.h  sock_tcp.c  sysdep.c  util.c  util.h
kernel/ntcompat/: NTStorPort.h  NTStorPort.m  meson.build  ntcompat.h  ntoskrnl.c  pe.c  storport.m  storportcompat.h
kernel/object/: meson.build  object.c
kernel/posix/: event.c  event.h  exec.c  meson.build  posixss.c  proc.c  proc.h  procfs.c  pxp.h  sctty.c  sys.c  sys.h  tty.c  tty.h  vm_posix.c
kernel/process/: ps.c  psp.h
kernel/riscv64/: linker.ld
kernel/subprojects/: uacpi
kernel/tmpfs/: tmp_vfsops.c  tmpfs.c  tmpfs.h
kernel/vfs/: lookup.c  meson.build  namecache.c  vfs.c  vfs.h
kernel/virt68k/: Makefile  Virt68kPlatform.m  meson.build  start.S  start.c
kernel/vm/: anon.c  cleaner.c  copyinout.c  fault.c  fork.c  init.c  kmem_cache.c  kmem_slab.c  kpaged.c  kwired.c  map.c  meson.build  obj.c  page.c  paging.c  pdaemon.c  pgwriter.c  pmapp.h  resident.c  tables.c  ubc.c  ubc.h  vad.c  vm.c  vm.h  vm_internal.h  vm_kernel.c  vm_page.c  vm_pdaemon.c  vm_swap.c  vmbalance.c  vmem.c  vmp.h  vmp_dynamics.h  writeback.c  ws.c
kernel/x86pc/: meson.build
lwip/: .editorconfig  meson.build
lwip/api/: err.c
lwip/core/: init.c  memp.c  netif.c  pbuf.c  tcp.c  tcp_in.c  tcp_out.c  timeouts.c  udp.c
lwip/include/: lwipopts.h
mlxkern/: logosmall.data  meson.build
mlxkern/devmgr/: devmgr.c  meson.build
mlxkern/executive/: ex_private.h  meson.build  start.c
mlxkern/ke/: ke.c  ke.h  ke_internal.h  meson.build  msgqueue.c  mutex.c  sched.c  semaphore.c  thread.c  time.c  timer.c  wait.c
mlxkern/kernel/: ke.c  ke.h  ke_internal.h  meson.build  msgqueue.c  mutex.c  sched.c  semaphore.c  thread.c  time.c  timer.c  wait.c
mlxkern/libkern/: libkern.c  libkern.h
mlxkern/mm/: mm.c  mm.h
mlxkern/object/: header.h  object.c  object.h
mlxkern/process/: ps.c  ps.h  psp.h
mlxkern/ps/: ps.c  ps.h
mlxkern/vm/: fault.c  fork.c  kmem.h  kmem_slab.c  kwired.c  meson.build  page.c  vad.c  vm.h  vm_internal.h  vmem.c  vmem.h  vmem_impl.h  ws.c
network_cmds/: default.script  ifconfig.c  ifconfig.m  meson.build
tools/memdbg/: lexer.l  main.cc  meson.build  parser.y  result.hh
(+766 files in other folders)
