lwip_sources = files(
        'core/ipv4/etharp.c', 'core/ipv4/icmp.c', 'core/ipv4/igmp.c',
        'core/ipv4/ip4.c', 'core/ipv4/ip4_addr.c', 'core/ipv4/ip4_frag.c',

        'core/ipv6/ethip6.c', 'core/ipv6/icmp6.c', 'core/ipv6/ip6.c',
        'core/ipv6/ip6_addr.c', 'core/ipv6/ip6_frag.c', 'core/ipv6/mld6.c',
        'core/ipv6/nd6.c',

        'core/def.c', 'core/inet_chksum.c', 'core/init.c', 'core/ip.c',
        'core/mem.c', 'core/memp.c', 'core/netif.c', 'core/pbuf.c', 'core/raw.c',
        'core/stats.c', 'core/tcp_in.c', 'core/tcp_out.c', 'core/tcp.c',
        'core/timeouts.c', 'core/udp.c',

        'netif/ethernet.c',

        'api/tcpip.c', 'api/err.c', 'api/netifapi.c'
)

lwip_includes = include_directories('include')
