viodisk = static_library('viodisk', 'viodev.cc', 'viodisk.cc',
	c_args: [ freestanding_c_args ],
	cpp_args: [ freestanding_cpp_args ],
	include_directories: [ mlx_sdk_includes, lai_includes ])

viofsprt = static_library('viofsprt', 'viofsprt.cc',
	c_args: [ freestanding_c_args ],
	cpp_args: [ freestanding_cpp_args ],
	include_directories: [ mlx_sdk_includes, lai_includes ])